# Twisted-Fate-card-drawing-assistant

./: LICENSE  MANUAL_VALIDATION.md  README.md  build_windows.ps1  input_backend.py  legacy_backend.py  main.py  pyproject.toml  requirements.txt  twist.py
app/: __init__.py  color_detector.py  config.py  input_backend.py  input_handlers.py  selector.py  state.py  win_input.py  window_guard.py
tests/: test_input_handlers.py  test_selector.py
